samples/_failures_safe/1761081393_068268_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b65dcd9b.c: In function ‘main’:
./samples/SAFE/__tmp_b65dcd9b.c:159:16: error: missing terminating " character
  159 |         printf("1. Multiply with another
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b65dcd9b.c:159:9: error: expected expression at end of input
  159 |         printf("1. Multiply with another
      |         ^~~~~~
./samples/SAFE/__tmp_b65dcd9b.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b65dcd9b.c:159:9: error: expected declaration or statement at end of input
